# tools

./: CMakeLists.txt  LICENSE  README
include/: CMakeLists.txt
include/emutechnology/: CMakeLists.txt  container_of.h  strdupa.h  table.h  zalloc.h
include/internal/: printing.h
include/tools/: CMakeLists.txt  array_size.h  arrayops.h  container_of.h  list.h  strdupa.h  stringify.h  table.h  zalloc.h  zalloca.h
src/: CMakeLists.txt  table.c
tests/: CMakeLists.txt
tests/strdupa/: CMakeLists.txt  strdupa.c  tests.inc
